// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatIntegrationAppearance/> render() should display correctly when creating a new chat integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/smooch_inside"
          >
            Chat (Deprecated)
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          New chat integration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value=""
              />
              <InputField
                label="Introduction text during business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="How can we help?"
              />
              <InputField
                label="Introduction text outside business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We'll be back tomorrow"
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <InputField
                label="Language"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "English US",
                      "value": "en-US",
                    },
                    Object {
                      "label": "French",
                      "value": "fr",
                    },
                    Object {
                      "label": "Spanish",
                      "value": "es",
                    },
                    Object {
                      "label": "Danish",
                      "value": "da",
                    },
                    Object {
                      "label": "Swedish",
                      "value": "sv",
                    },
                    Object {
                      "label": "Italian",
                      "value": "it",
                    },
                    Object {
                      "label": "Dutch",
                      "value": "nl",
                    },
                    Object {
                      "label": "German",
                      "value": "de",
                    },
                    Object {
                      "label": "Norwegian",
                      "value": "no",
                    },
                    Object {
                      "label": "Czech",
                      "value": "cz",
                    },
                  ]
                }
                type="select"
                value="en-US"
              >
                <option
                  key="en-US"
                  value="en-US"
                >
                  English US
                </option>
                <option
                  key="fr"
                  value="fr"
                >
                  French
                </option>
                <option
                  key="es"
                  value="es"
                >
                  Spanish
                </option>
                <option
                  key="da"
                  value="da"
                >
                  Danish
                </option>
                <option
                  key="sv"
                  value="sv"
                >
                  Swedish
                </option>
                <option
                  key="it"
                  value="it"
                >
                  Italian
                </option>
                <option
                  key="nl"
                  value="nl"
                >
                  Dutch
                </option>
                <option
                  key="de"
                  value="de"
                >
                  German
                </option>
                <option
                  key="no"
                  value="no"
                >
                  Norwegian
                </option>
                <option
                  key="cz"
                  value="cz"
                >
                  Czech
                </option>
              </InputField>
            </div>
          </div>
          <Button
            className=""
            color="success"
            disabled={false}
            tag="button"
            type="submit"
          >
            Add new chat
          </Button>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          avatarTeamPictureUrl={null}
          avatarType="team-members"
          currentUser={Immutable.Map {}}
          introductionText="How can we help?"
          isOnline={true}
          language="en-US"
          mainColor="#0d87dd"
          name=""
          offlineIntroductionText="We'll be back tomorrow"
          renderFooter={true}
        >
          <Connect(MessageContentContainer)
            conversationColor="#0d87dd"
          />
        </ChatIntegrationPreview>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<ChatIntegrationAppearance/> render() should display correctly when integration is loading 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/smooch_inside"
          >
            Chat (Deprecated)
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          hellosmoochintegration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "name": "hellosmoochintegration",
        "type": "smooch_inside",
        "meta": Immutable.Map {
          "language": "en-US",
        },
      }
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value="hellosmoochintegration"
              />
              <InputField
                label="Introduction text during business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="How can we help?"
              />
              <InputField
                label="Introduction text outside business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We'll be back tomorrow"
              />
              <RadioField
                disabled={false}
                key="type-field"
                label="Avatar"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "Use team members' avatars",
                      "value": "team-members",
                    },
                    Object {
                      "description": "For example, use your company's logo. The image needs to be a square of 500kb maximum.",
                      "label": "Use a single image for the whole team",
                      "value": "team-picture",
                    },
                  ]
                }
                value="team-members"
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <InputField
                label="Language"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "English US",
                      "value": "en-US",
                    },
                    Object {
                      "label": "French",
                      "value": "fr",
                    },
                    Object {
                      "label": "Spanish",
                      "value": "es",
                    },
                    Object {
                      "label": "Danish",
                      "value": "da",
                    },
                    Object {
                      "label": "Swedish",
                      "value": "sv",
                    },
                    Object {
                      "label": "Italian",
                      "value": "it",
                    },
                    Object {
                      "label": "Dutch",
                      "value": "nl",
                    },
                    Object {
                      "label": "German",
                      "value": "de",
                    },
                    Object {
                      "label": "Norwegian",
                      "value": "no",
                    },
                    Object {
                      "label": "Czech",
                      "value": "cz",
                    },
                  ]
                }
                type="select"
                value="en-US"
              >
                <option
                  key="en-US"
                  value="en-US"
                >
                  English US
                </option>
                <option
                  key="fr"
                  value="fr"
                >
                  French
                </option>
                <option
                  key="es"
                  value="es"
                >
                  Spanish
                </option>
                <option
                  key="da"
                  value="da"
                >
                  Danish
                </option>
                <option
                  key="sv"
                  value="sv"
                >
                  Swedish
                </option>
                <option
                  key="it"
                  value="it"
                >
                  Italian
                </option>
                <option
                  key="nl"
                  value="nl"
                >
                  Dutch
                </option>
                <option
                  key="de"
                  value="de"
                >
                  German
                </option>
                <option
                  key="no"
                  value="no"
                >
                  Norwegian
                </option>
                <option
                  key="cz"
                  value="cz"
                >
                  Czech
                </option>
              </InputField>
            </div>
          </div>
          <Button
            className="btn-loading"
            color="success"
            disabled={true}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          avatarTeamPictureUrl={null}
          avatarType="team-members"
          currentUser={Immutable.Map {}}
          introductionText="How can we help?"
          isOnline={true}
          language="en-US"
          mainColor="#0d87dd"
          name="hellosmoochintegration"
          offlineIntroductionText="We'll be back tomorrow"
          renderFooter={true}
        >
          <Connect(MessageContentContainer)
            conversationColor="#0d87dd"
          />
        </ChatIntegrationPreview>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<ChatIntegrationAppearance/> render() should display correctly when updating an existing integration 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/smooch_inside"
          >
            Chat (Deprecated)
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          hellosmoochintegration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "name": "hellosmoochintegration",
        "type": "smooch_inside",
        "meta": Immutable.Map {
          "language": "en-US",
        },
      }
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value="hellosmoochintegration"
              />
              <InputField
                label="Introduction text during business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="How can we help?"
              />
              <InputField
                label="Introduction text outside business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We'll be back tomorrow"
              />
              <RadioField
                disabled={false}
                key="type-field"
                label="Avatar"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "Use team members' avatars",
                      "value": "team-members",
                    },
                    Object {
                      "description": "For example, use your company's logo. The image needs to be a square of 500kb maximum.",
                      "label": "Use a single image for the whole team",
                      "value": "team-picture",
                    },
                  ]
                }
                value="team-members"
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <InputField
                label="Language"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "English US",
                      "value": "en-US",
                    },
                    Object {
                      "label": "French",
                      "value": "fr",
                    },
                    Object {
                      "label": "Spanish",
                      "value": "es",
                    },
                    Object {
                      "label": "Danish",
                      "value": "da",
                    },
                    Object {
                      "label": "Swedish",
                      "value": "sv",
                    },
                    Object {
                      "label": "Italian",
                      "value": "it",
                    },
                    Object {
                      "label": "Dutch",
                      "value": "nl",
                    },
                    Object {
                      "label": "German",
                      "value": "de",
                    },
                    Object {
                      "label": "Norwegian",
                      "value": "no",
                    },
                    Object {
                      "label": "Czech",
                      "value": "cz",
                    },
                  ]
                }
                type="select"
                value="en-US"
              >
                <option
                  key="en-US"
                  value="en-US"
                >
                  English US
                </option>
                <option
                  key="fr"
                  value="fr"
                >
                  French
                </option>
                <option
                  key="es"
                  value="es"
                >
                  Spanish
                </option>
                <option
                  key="da"
                  value="da"
                >
                  Danish
                </option>
                <option
                  key="sv"
                  value="sv"
                >
                  Swedish
                </option>
                <option
                  key="it"
                  value="it"
                >
                  Italian
                </option>
                <option
                  key="nl"
                  value="nl"
                >
                  Dutch
                </option>
                <option
                  key="de"
                  value="de"
                >
                  German
                </option>
                <option
                  key="no"
                  value="no"
                >
                  Norwegian
                </option>
                <option
                  key="cz"
                  value="cz"
                >
                  Czech
                </option>
              </InputField>
            </div>
          </div>
          <Button
            className=""
            color="success"
            disabled={false}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          avatarTeamPictureUrl={null}
          avatarType="team-members"
          currentUser={Immutable.Map {}}
          introductionText="How can we help?"
          isOnline={true}
          language="en-US"
          mainColor="#0d87dd"
          name="hellosmoochintegration"
          offlineIntroductionText="We'll be back tomorrow"
          renderFooter={true}
        >
          <Connect(MessageContentContainer)
            conversationColor="#0d87dd"
          />
        </ChatIntegrationPreview>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<ChatIntegrationAppearance/> render() should mark the file field for team picture as required because the avatar type is \`team-picture\` and there is no team picture set 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/smooch_inside"
          >
            Chat (Deprecated)
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          hellosmoochintegration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "name": "hellosmoochintegration",
        "type": "smooch_inside",
        "decoration": Immutable.Map {
          "avatar_type": "team-picture",
          "avatar_team_picture_url": null,
        },
        "meta": Immutable.Map {
          "language": "en-US",
        },
      }
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value="hellosmoochintegration"
              />
              <InputField
                label="Introduction text during business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="How can we help?"
              />
              <InputField
                label="Introduction text outside business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We'll be back tomorrow"
              />
              <RadioField
                disabled={false}
                key="type-field"
                label="Avatar"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "Use team members' avatars",
                      "value": "team-members",
                    },
                    Object {
                      "description": "For example, use your company's logo. The image needs to be a square of 500kb maximum.",
                      "label": "Use a single image for the whole team",
                      "value": "team-picture",
                    },
                  ]
                }
                value="team-picture"
              />
              <div
                className="d-flex flex-direction-row mb-2"
                key="file-field"
              >
                <Connect(FileFieldContainer)
                  maxSize={500000}
                  noPreview={true}
                  onChange={[Function]}
                  params={
                    Object {
                      "integration_id": 2,
                    }
                  }
                  required={true}
                  returnFiles={false}
                  uploadType="avatar_team_picture"
                />
              </div>
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <InputField
                label="Language"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "English US",
                      "value": "en-US",
                    },
                    Object {
                      "label": "French",
                      "value": "fr",
                    },
                    Object {
                      "label": "Spanish",
                      "value": "es",
                    },
                    Object {
                      "label": "Danish",
                      "value": "da",
                    },
                    Object {
                      "label": "Swedish",
                      "value": "sv",
                    },
                    Object {
                      "label": "Italian",
                      "value": "it",
                    },
                    Object {
                      "label": "Dutch",
                      "value": "nl",
                    },
                    Object {
                      "label": "German",
                      "value": "de",
                    },
                    Object {
                      "label": "Norwegian",
                      "value": "no",
                    },
                    Object {
                      "label": "Czech",
                      "value": "cz",
                    },
                  ]
                }
                type="select"
                value="en-US"
              >
                <option
                  key="en-US"
                  value="en-US"
                >
                  English US
                </option>
                <option
                  key="fr"
                  value="fr"
                >
                  French
                </option>
                <option
                  key="es"
                  value="es"
                >
                  Spanish
                </option>
                <option
                  key="da"
                  value="da"
                >
                  Danish
                </option>
                <option
                  key="sv"
                  value="sv"
                >
                  Swedish
                </option>
                <option
                  key="it"
                  value="it"
                >
                  Italian
                </option>
                <option
                  key="nl"
                  value="nl"
                >
                  Dutch
                </option>
                <option
                  key="de"
                  value="de"
                >
                  German
                </option>
                <option
                  key="no"
                  value="no"
                >
                  Norwegian
                </option>
                <option
                  key="cz"
                  value="cz"
                >
                  Czech
                </option>
              </InputField>
            </div>
          </div>
          <Button
            className=""
            color="success"
            disabled={false}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          avatarTeamPictureUrl={null}
          avatarType="team-picture"
          currentUser={Immutable.Map {}}
          introductionText="How can we help?"
          isOnline={true}
          language="en-US"
          mainColor="#0d87dd"
          name="hellosmoochintegration"
          offlineIntroductionText="We'll be back tomorrow"
          renderFooter={true}
        >
          <Connect(MessageContentContainer)
            conversationColor="#0d87dd"
          />
        </ChatIntegrationPreview>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<ChatIntegrationAppearance/> render() should not mark the file field for team picture as required because the avatar type is \`team-members\` 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/smooch_inside"
          >
            Chat (Deprecated)
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          hellosmoochintegration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "name": "hellosmoochintegration",
        "type": "smooch_inside",
        "decoration": Immutable.Map {
          "avatar_type": "team-members",
          "avatar_team_picture_url": null,
        },
        "meta": Immutable.Map {
          "language": "en-US",
        },
      }
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value="hellosmoochintegration"
              />
              <InputField
                label="Introduction text during business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="How can we help?"
              />
              <InputField
                label="Introduction text outside business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We'll be back tomorrow"
              />
              <RadioField
                disabled={false}
                key="type-field"
                label="Avatar"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "Use team members' avatars",
                      "value": "team-members",
                    },
                    Object {
                      "description": "For example, use your company's logo. The image needs to be a square of 500kb maximum.",
                      "label": "Use a single image for the whole team",
                      "value": "team-picture",
                    },
                  ]
                }
                value="team-members"
              />
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <InputField
                label="Language"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "English US",
                      "value": "en-US",
                    },
                    Object {
                      "label": "French",
                      "value": "fr",
                    },
                    Object {
                      "label": "Spanish",
                      "value": "es",
                    },
                    Object {
                      "label": "Danish",
                      "value": "da",
                    },
                    Object {
                      "label": "Swedish",
                      "value": "sv",
                    },
                    Object {
                      "label": "Italian",
                      "value": "it",
                    },
                    Object {
                      "label": "Dutch",
                      "value": "nl",
                    },
                    Object {
                      "label": "German",
                      "value": "de",
                    },
                    Object {
                      "label": "Norwegian",
                      "value": "no",
                    },
                    Object {
                      "label": "Czech",
                      "value": "cz",
                    },
                  ]
                }
                type="select"
                value="en-US"
              >
                <option
                  key="en-US"
                  value="en-US"
                >
                  English US
                </option>
                <option
                  key="fr"
                  value="fr"
                >
                  French
                </option>
                <option
                  key="es"
                  value="es"
                >
                  Spanish
                </option>
                <option
                  key="da"
                  value="da"
                >
                  Danish
                </option>
                <option
                  key="sv"
                  value="sv"
                >
                  Swedish
                </option>
                <option
                  key="it"
                  value="it"
                >
                  Italian
                </option>
                <option
                  key="nl"
                  value="nl"
                >
                  Dutch
                </option>
                <option
                  key="de"
                  value="de"
                >
                  German
                </option>
                <option
                  key="no"
                  value="no"
                >
                  Norwegian
                </option>
                <option
                  key="cz"
                  value="cz"
                >
                  Czech
                </option>
              </InputField>
            </div>
          </div>
          <Button
            className=""
            color="success"
            disabled={false}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          avatarTeamPictureUrl={null}
          avatarType="team-members"
          currentUser={Immutable.Map {}}
          introductionText="How can we help?"
          isOnline={true}
          language="en-US"
          mainColor="#0d87dd"
          name="hellosmoochintegration"
          offlineIntroductionText="We'll be back tomorrow"
          renderFooter={true}
        >
          <Connect(MessageContentContainer)
            conversationColor="#0d87dd"
          />
        </ChatIntegrationPreview>
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`<ChatIntegrationAppearance/> render() should not mark the file field for team picture as required because the avatar type is \`team-picture\` but there is a team picture set 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/integrations/smooch_inside"
          >
            Chat (Deprecated)
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          hellosmoochintegration
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <ChatIntegrationNavigation
    integration={
      Immutable.Map {
        "id": 2,
        "name": "hellosmoochintegration",
        "type": "smooch_inside",
        "decoration": Immutable.Map {
          "avatar_type": "team-picture",
          "avatar_team_picture_url": "https://gorgias.io/teampicture.png",
        },
        "meta": Immutable.Map {
          "language": "en-US",
        },
      }
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="form"
          >
            <div
              className="fieldset"
            >
              <InputField
                label="Chat title"
                onChange={[Function]}
                placeholder="Ex: Company Support"
                required={true}
                type="text"
                value="hellosmoochintegration"
              />
              <InputField
                label="Introduction text during business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="How can we help?"
              />
              <InputField
                label="Introduction text outside business hours"
                maxLength={50}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="We'll be back tomorrow"
              />
              <RadioField
                disabled={false}
                key="type-field"
                label="Avatar"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "Use team members' avatars",
                      "value": "team-members",
                    },
                    Object {
                      "description": "For example, use your company's logo. The image needs to be a square of 500kb maximum.",
                      "label": "Use a single image for the whole team",
                      "value": "team-picture",
                    },
                  ]
                }
                value="team-picture"
              />
              <div
                className="d-flex flex-direction-row mb-2"
                key="file-field"
              >
                <img
                  alt="Team avatar"
                  className="mr-3"
                  src="https://gorgias.io/teampicture.png"
                  style={
                    Object {
                      "maxWidth": "100px",
                    }
                  }
                />
                <Connect(FileFieldContainer)
                  maxSize={500000}
                  noPreview={true}
                  onChange={[Function]}
                  params={
                    Object {
                      "integration_id": 2,
                    }
                  }
                  required={false}
                  returnFiles={false}
                  uploadType="avatar_team_picture"
                />
              </div>
              <ColorField
                label="Main color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <ColorField
                label="Conversation color"
                onChange={[Function]}
                type="text"
                value="#0d87dd"
              />
              <InputField
                label="Language"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "English US",
                      "value": "en-US",
                    },
                    Object {
                      "label": "French",
                      "value": "fr",
                    },
                    Object {
                      "label": "Spanish",
                      "value": "es",
                    },
                    Object {
                      "label": "Danish",
                      "value": "da",
                    },
                    Object {
                      "label": "Swedish",
                      "value": "sv",
                    },
                    Object {
                      "label": "Italian",
                      "value": "it",
                    },
                    Object {
                      "label": "Dutch",
                      "value": "nl",
                    },
                    Object {
                      "label": "German",
                      "value": "de",
                    },
                    Object {
                      "label": "Norwegian",
                      "value": "no",
                    },
                    Object {
                      "label": "Czech",
                      "value": "cz",
                    },
                  ]
                }
                type="select"
                value="en-US"
              >
                <option
                  key="en-US"
                  value="en-US"
                >
                  English US
                </option>
                <option
                  key="fr"
                  value="fr"
                >
                  French
                </option>
                <option
                  key="es"
                  value="es"
                >
                  Spanish
                </option>
                <option
                  key="da"
                  value="da"
                >
                  Danish
                </option>
                <option
                  key="sv"
                  value="sv"
                >
                  Swedish
                </option>
                <option
                  key="it"
                  value="it"
                >
                  Italian
                </option>
                <option
                  key="nl"
                  value="nl"
                >
                  Dutch
                </option>
                <option
                  key="de"
                  value="de"
                >
                  German
                </option>
                <option
                  key="no"
                  value="no"
                >
                  Norwegian
                </option>
                <option
                  key="cz"
                  value="cz"
                >
                  Czech
                </option>
              </InputField>
            </div>
          </div>
          <Button
            className=""
            color="success"
            disabled={false}
            tag="button"
            type="submit"
          >
            Save changes
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this integration? All associated views and rules will be disabled."
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete chat
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        className="p-0"
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <div
          className="d-flex justify-content-center align-items-center"
          style={
            Object {
              "width": "30em",
            }
          }
        >
          <ButtonGroup
            className="mb-3"
            role="group"
            tag="div"
          >
            <Button
              color="info"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              During business hours
            </Button>
            <Button
              color="secondary"
              onClick={[Function]}
              tag="button"
              type="button"
            >
              Outside business hours
            </Button>
          </ButtonGroup>
        </div>
        <ChatIntegrationPreview
          avatarTeamPictureUrl="https://gorgias.io/teampicture.png"
          avatarType="team-picture"
          currentUser={Immutable.Map {}}
          introductionText="How can we help?"
          isOnline={true}
          language="en-US"
          mainColor="#0d87dd"
          name="hellosmoochintegration"
          offlineIntroductionText="We'll be back tomorrow"
          renderFooter={true}
        >
          <Connect(MessageContentContainer)
            conversationColor="#0d87dd"
          />
        </ChatIntegrationPreview>
      </Col>
    </Row>
  </Container>
</div>
`;
